fixed column overlapping issue

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4 {
 form {
   max-width: 625px;
   margin: 30px auto;
-  padding: 10px;
+  padding: 10px 20px;
   background: #ee913a;
   border-radius: 10px;
 }
@@ -63,10 +63,10 @@ footer {
   flex-direction: column;
 }
 
-.col-1 {
-  height: 100px;
-  width: 100%;
+.col-2 {
+  width: 66.66%;
 }
+
 
 @media (min-width: 800px) {
 
